# adventofcode

./: .gitignore
aoc-2019/day10/: .cproject
aoc-2019/day11/: .cproject  output.txt
aoc-2019/day3/: .cproject
aoc-2019/day6/: input.txt
aoc-2019/day8/: .cproject
aoc-2020/day01/: CMakeLists.txt  day01.cpp  day01.h  load_data.cpp  load_data.h  main.cpp
aoc-2020/day02/: CMakeLists.txt  day02.cpp  day02.h  main.cpp
aoc-2020/day03/: CMakeLists.txt  day03.cpp  day03.h  main.cpp
aoc-2020/day04/: CMakeLists.txt  day04.cpp  day04.h  main.cpp
aoc-2020/day05/: CMakeLists.txt  day05.cpp  day05.h  main.cpp
aoc-2020/day06/: CMakeLists.txt  day06.cpp  day06.h  main.cpp
aoc-2020/day07/: CMakeLists.txt  day07.cpp  day07.h  main.cpp
aoc-2020/day08/: CMakeLists.txt  acc_computer.cpp  acc_computer.h  day08.cpp  day08.h  main.cpp
aoc-2020/day09/: CMakeLists.txt  day09.cpp  day09.h  main.cpp
aoc-2020/day10/: CMakeLists.txt  day10.cpp  day10.h  main.cpp
aoc-2020/day11/: CMakeLists.txt  day11.cpp  day11.h  main.cpp
aoc-2020/day12/: CMakeLists.txt  day12.cpp  day12.h  main.cpp
aoc-2020/day13/: CMakeLists.txt  day13.cpp  day13.h  main.cpp  (+1 more)
aoc-2020/day15/: CMakeLists.txt  Map.ods  day15.cpp  day15.h  main.cpp  show_container.h  test.cpp
day1/: .cproject
day10/: .project
day11/: .cproject  .project  output.txt
day13/: .cproject  .project  day13.exe.stackdump  gdb.exe.stackdump
day3/: .project
day4/: .project
day5/: .project
day6/: .cproject  .project  input.txt  output.txt
day7/: .project
day8/: .project  day8.exe.stackdump
day9/: .project
(+97 files in other folders)
